@@ -15,7 +15,7 @@ Bugfixes:
 
 Code changes:
 - removed unit tests
-
+- moved Timer class from ui module to data module
 
 2005-03-31: Revelation 0.4.3
 ============================
