@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.4 ]---------------
 
+2005-06-30  Erik Grinaker <erikg@codepoet.no>
+
+	* moved Timer class from ui module to data module
+
 2005-06-24  Erik Grinaker <erikg@codepoet.no>
 
 	* option for copying password to clipboard on doubleclick
